@@ -7,6 +7,7 @@ Version 6.5.1 - not yet released
   - fix MacCready adjustment for non-metric units (#2654)
 * user interface
   - fix bogus "restart XCSoar" messages
+  - fix cross section render error on some OpenGL chips (#2631, #2661)
 * data files
   - use the terrain cache even when the system clock is wrong
   - fix G record regression (#2657)
